--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -79,6 +79,13 @@ h4 {
 @import 'blocks/nav';
 @import 'blocks/button';
 @import 'blocks/skip-link';
+@import 'blocks/studio-feed';
+@import 'blocks/post-list';
+@import 'blocks/page-header';
+@import 'blocks/pagination';
+@import 'blocks/people';
+@import 'blocks/person';
+@import 'blocks/gallery';
 
 // Import utilities
 @import 'utilities/dot-shadow';
@@ -89,3 +96,7 @@ h4 {
 @import 'utilities/site-wrap';
 @import 'utilities/visually-hidden';
 @import 'utilities/wrapper';
+@import 'blocks/cta';
+@import 'utilities/headline';
+@import 'blocks/featured-work';
+@import 'utilities/auto-grid';
